// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Button/Button Dev 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Dev
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Button/Button Icons 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <button
      className="fd-button fd-button--emphasized"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Add to Cart
      </span>
      <i
        className="sap-icon--cart"
      />
    </button>
    <button
      className="fd-button"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Add to Cart
      </span>
      <i
        className="sap-icon--cart"
      />
    </button>
    <button
      className="fd-button fd-button--transparent"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Filter
      </span>
      <i
        className="sap-icon--filter"
      />
    </button>
    <button
      className="fd-button fd-button--positive"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Approve
      </span>
      <i
        className="sap-icon--accept"
      />
    </button>
    <button
      className="fd-button fd-button--negative"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Reject
      </span>
      <i
        className="sap-icon--decline"
      />
    </button>
    <button
      className="fd-button fd-button--ghost"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Edit
      </span>
      <i
        className="sap-icon--edit"
      />
    </button>
    <button
      className="fd-button fd-button--attention"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Ignore
      </span>
      <i
        className="sap-icon--warning"
      />
    </button>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--emphasized"
      type="button"
    >
      <i
        className="sap-icon--alert"
      />
    </button>
    <button
      aria-label="Add to cart"
      className="fd-button"
      type="button"
    >
      <i
        className="sap-icon--cart"
      />
    </button>
    <button
      aria-label="Filter"
      className="fd-button fd-button--transparent"
      type="button"
    >
      <i
        className="sap-icon--cart"
      />
    </button>
    <button
      aria-label="Accept"
      className="fd-button fd-button--positive"
      type="button"
    >
      <i
        className="sap-icon--accept"
      />
    </button>
    <button
      aria-label="Decline"
      className="fd-button fd-button--negative"
      type="button"
    >
      <i
        className="sap-icon--decline"
      />
    </button>
    <button
      aria-label="Edit"
      className="fd-button fd-button--ghost"
      type="button"
    >
      <i
        className="sap-icon--edit"
      />
    </button>
    <button
      aria-label="Ignore"
      className="fd-button fd-button--attention"
      type="button"
    >
      <i
        className="sap-icon--warning"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button/Button Options 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <button
      className="fd-button fd-button--emphasized"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Emphasized Button
      </span>
    </button>
    <button
      className="fd-button"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Default Button
      </span>
    </button>
    <button
      className="fd-button fd-button--transparent"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Transparent Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button/Button Primary 1`] = `
<div
  dir="ltr"
>
  <button
    className="fd-button"
    type="button"
  >
    <span
      className="fd-button__text"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Component API/Button/Button Sizes 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <button
      className="fd-button"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Default
      </span>
    </button>
    <button
      className="fd-button fd-button--compact"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Compact
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Component API/Button/Button States 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <button
      className="fd-button"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Default
      </span>
    </button>
    <button
      className="fd-button is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Selected
      </span>
    </button>
    <button
      className="fd-button is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Disabled
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Disabled Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--emphasized"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Emphasized
      </span>
    </button>
    <button
      className="fd-button fd-button--emphasized is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Emphasized
      </span>
    </button>
    <button
      className="fd-button fd-button--emphasized is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Emphasized
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button fd-button--emphasized is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Emphasized Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--transparent"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Transparent
      </span>
    </button>
    <button
      className="fd-button fd-button--transparent is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Transparent
      </span>
    </button>
    <button
      className="fd-button fd-button--transparent is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Transparent
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button fd-button--transparent is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Transparent Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--positive"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Positive Button
      </span>
    </button>
    <button
      className="fd-button fd-button--positive is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Positive Button
      </span>
    </button>
    <button
      className="fd-button fd-button--positive is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Positive Button
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button fd-button--positive is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Positive Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--negative"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Negative Button
      </span>
    </button>
    <button
      className="fd-button fd-button--negative is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Negative Button
      </span>
    </button>
    <button
      className="fd-button fd-button--negative is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Negative Button
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button fd-button--negative is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Negative Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--ghost"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Ghost Button
      </span>
    </button>
    <button
      className="fd-button fd-button--ghost is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Ghost Button
      </span>
    </button>
    <button
      className="fd-button fd-button--ghost is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Ghost Button
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button fd-button--ghost is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Ghost Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
    <div
      className="fddocs-container--break"
    />
    <button
      className="fd-button fd-button--attention"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Attention Button
      </span>
    </button>
    <button
      className="fd-button fd-button--attention is-selected"
      selected={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Attention Button
      </span>
    </button>
    <button
      className="fd-button fd-button--attention is-disabled"
      disabled={true}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Attention Button
      </span>
    </button>
    <button
      aria-describedby="fd-mocked-short-id"
      aria-disabled={true}
      className="fd-button fd-button--attention is-disabled"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Attention Focusable
      </span>
    </button>
    <p
      aria-live="assertive"
      className="fd-button__instructions"
      id="fd-mocked-short-id"
    >
      To enable this button use the knob in the dev story
    </p>
  </div>
</div>
`;

exports[`Storyshots Component API/Button/Button Types 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <button
      className="fd-button"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Default Button
      </span>
    </button>
    <button
      className="fd-button fd-button--standard"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Standard Button
      </span>
    </button>
    <button
      className="fd-button fd-button--positive"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Positive Button
      </span>
    </button>
    <button
      className="fd-button fd-button--negative"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Negative Button
      </span>
    </button>
    <button
      className="fd-button fd-button--ghost"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Ghost Button
      </span>
    </button>
    <button
      className="fd-button fd-button--attention"
      type="button"
    >
      <span
        className="fd-button__text"
      >
        Attention Button
      </span>
    </button>
  </div>
</div>
`;
